# serializer version: 1
# name: test_streamk_pap_cluster_multicast_gfx1250_golden[cs2_ck2]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgC-SsVRMvMU24VAm3_KICvTjxEgYgV8zjUsf22eFkVD0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgIOd9JiHalyCrFautyRFkJaZg9omA_SgZ1S4RVL76gNU=',
      'err': 0,
    }),
  ])
# ---
# name: test_streamk_pap_cluster_multicast_gfx1250_golden[cs4_ck1]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgNOOlATCJKvAVtVqW_v35ZonxiMvVdWP_TIJyOfY3OTI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgUjZleQ4r6nUuixUtjJRraqJYwK8NzH54jQIyXJTcOIQ=',
      'err': 0,
    }),
  ])
# ---
